--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,10 @@ body{
   background-color: #cf00d2;
   color: white;
 }
+img{max-width: 100%;}
+.fixtures-img{max-height: 200px;}
+.vs{
+  font-size: 5rem;
+  font-weight: 600;
+  margin-top: 6.5rem;
+}
