--- a/src/App.css
+++ b/src/App.css
@@ -77,28 +77,44 @@ a:hover {
   font-size: 2.5rem;
 }
 
+.fixture-item{
+  border-bottom: 1px solid white;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 .club-box{
   margin-bottom: 2rem;
 }
+
 .club-box .img-wrap{
   max-width: 75%;
   height: 175px;
   margin: 0 auto;
 }
+
 .club-box .img-wrap img{
   max-width: 100%;
   min-width: 75%;
   max-height: 100%;
 }
+
 body{
   background-image: url(/assets/images/black-twill-50.png);
   background-color: #cf00d2;
   color: white;
 }
+
 img{max-width: 100%;}
+
 .fixtures-img{max-height: 200px;}
+
 .vs{
   font-size: 5rem;
   font-weight: 600;
   margin-top: 6.5rem;
+}
+
+.crest-and-stats p{
+  margin-bottom: .75rem;
 }
